# dhcp-v6

./: CMakeLists.txt  README.md  main.c
messages/dhcpv6_advertisement/: dhcpv6_advertisment.c  dhcpv6_advertisment.h
messages/router_advertisment/: router_advertisement.c  router_advertisement.h
server/: init.c  init.h
structures/dhcpv6_struct/: dhcpv6_struct.c
